<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ecrit_compta2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.secodi.it_solution.secodi.EcritComptable2">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="49dp"
        android:text="@string/libOperat" />

    <EditText
        android:id="@+id/libOperat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView6"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/textView6"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="48dp"
        android:layout_toStartOf="@+id/libOperat"
        android:text="@string/mtn" />

    <EditText
        android:id="@+id/mtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/libOperat"
        android:ems="10"
        android:inputType="number"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="47dp"
        android:text="@string/numPiece" />

    <EditText
        android:id="@+id/numPiece"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView8"
        android:layout_marginStart="22dp"
        android:layout_toEndOf="@+id/textView8"
        android:ems="10"
        android:inputType="number"
        android:textSize="18sp"
        android:layout_width="120dp" />

    <Button
        android:id="@+id/btnNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/numPiece"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/numPiece"
        android:text="@string/numeriser" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView8"
        android:layout_marginTop="48dp"
        android:text="@string/numFact" />

    <EditText
        android:id="@+id/numFact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView9"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/mtn"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="text|number"
        android:textSize="18sp" />

    <Button
        android:id="@+id/prev"
        style="@style/btn"
        android:layout_width="150dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="30dp"
        android:text="@string/prev" />

    <Button
        android:id="@+id/valider"
        style="@style/btn"
        android:layout_width="150dp"
        android:layout_alignBottom="@id/prev"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/prev"
        android:text="@string/valider" />
</RelativeLayout>
