<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ecrit_comptable1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.secodi.it_solution.secodi.EcritComptable1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <TextView
                android:id="@+id/t44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/datePicker"
                android:layout_marginTop="70dp"
                android:layout_toStartOf="@+id/spinTypeOperat"
                android:text="@string/jrnal" />

            <Spinner
                android:id="@+id/spinJrnal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/t44"
                android:layout_alignStart="@+id/spinTypeOperat"
                android:layout_marginLeft="20dp" />

            <TextView
                android:id="@+id/to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/t44"
                android:layout_marginTop="30dp"
                android:text="@string/typeOperat" />

            <Spinner
                android:id="@+id/spinTypeOperat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/to"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/to" />

            <TextView
                android:id="@+id/ti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/to"
                android:layout_marginTop="30dp"
                android:layout_toStartOf="@+id/spinTypeOperat"
                android:text="@string/tiers" />

            <Spinner
                android:id="@+id/spinTiers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/ti"
                android:layout_alignStart="@+id/spinTypeOperat"
                android:layout_marginLeft="20dp" />

            <TextView
                android:id="@+id/nc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/spinTiers"
                android:layout_marginRight="50dp"
                android:layout_marginTop="40dp"
                android:text="@string/numCmptColl"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/tc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/nc"
                android:layout_marginTop="30dp"
                android:text="@string/cmpte" />

            <EditText
                android:id="@+id/cmpte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/tc"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/tc"
                android:inputType="number"
                android:textSize="18sp" />

            <Button
                android:id="@+id/annuler"
                style="@style/btn"
                android:layout_width="150dp"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/cmpte"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/annuler" />

            <Button
                android:id="@+id/svt"
                style="@style/btn"
                android:layout_width="150dp"
                android:layout_alignBottom="@id/annuler"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/annuler"
                android:text="@string/svt" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
